2007-02-20  Ikumi Keita	<ikumi@ikumi.que.jp>

	* tex-buf.el (TeX-region-file): Doc fix.

2007-02-15  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex.el (TeX-after-insert-macro-hook): New hook.
	(TeX-insert-macro): Use it.

	* tex-fold.el (TeX-fold-auto): New variable.
	(TeX-fold-mode): Append auto fold stuff to the end of
	`TeX-after-insert-macro-hook'.

2007-02-13  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-clean): Fix last change.

2007-02-10  Ralf Angeli  <angeli@caeruleus.net>

	* tex-fold.el (TeX-fold-macro-spec-list-internal)
	(TeX-fold-env-spec-list-internal)
	(TeX-fold-math-spec-list-internal): New variables.
	(TeX-fold-region-macro-or-env, TeX-fold-item): Use them.
	(TeX-fold-comment-do): Doc fix.
	(TeX-fold-mode): Set TeX-fold-*-spec-list-internal variables.  Use
	<mode-prefix>-fold-*-spec-list variables if bound.

	* latex.el (LaTeX-fold-macro-spec-list)
	(LaTeX-fold-env-spec-list, LaTeX-fold-math-spec-list): New
	variables.

	* tex.el (TeX-mode-prefix): New function.
	(TeX-clean): Use it.

2007-02-10  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex-jp.el (TeX-japanese-process-input-coding-system)
	(TeX-japanese-process-output-coding-system): Use system-type
	instead of window-system.  Suggested by Ikumi Keita
	<ikumi@ikumi.que.jp>.

2007-02-09  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex-jp.el (TeX-japanese-process-input-coding-system)
	(TeX-japanese-process-output-coding-system): Do not use
	default-coding-system to set process-coding-system, anymore.  The
	value is set to shift_jis or euc-jp depending on window-system.

	* tex-bar.el: Fix typo.  Reported by Ikumi Keita
	<ikumi@ikumi.que.jp>.

2007-02-09  Ikumi Keita	<ikumi@ikumi.que.jp>

	* tex-jp.el (japanese-TeX-command-list): Add
	`TeX-run-discard-foreground' and `TeX-run-function' for
	function-item.
	(japanese-TeX-set-process-coding-system): New function.
	(TeX-after-start-process-function): Use it.  Cater for the
	accidental case that no-Japanese loads tex-jp.el and his